# aoc-2023

./: .gitignore  04p1.py  05p1.py  05p2.py  06p1.py  06p2.py  07p1.py  07p2.py  08p2.py  09p1.py  09p2.py  10p1.py  10p2.py  11p1.py  13p1.py  13p2.py  14p1.py  14p2.py  16p1.py  16p2.py  Main.lean  README.md  aoc.cabal  flake.nix  fourmolu.yaml  get_input.py  lake-manifest.json  lakefile.lean
01p1/: main.py
01p2/: main.py
Lib/: Common.lean
Solutions/: Day01.lean
lib/: Adlude.hs  Parsing.hs
src/: 01.py  02p1.py  02p2.py  03p1.py  03p2.py  04p1.py  04p2.py  06p1.py  08p1.py  09p1.py  09p2.py  10p1.py  10p2.py  11p2.py  12p1.py  12p2.py  14p2.py  15p1.py  15p2.py  16p2.py  17p1.py  17p2.py  18p1.py  18p2.py  19p1.py  19p2.py  20p1.py  20p2.py  21p1.py  21p2.py  22p1.py  22p2.py  23p1.py  23p2.py  24p1.py  24p2.py  25p1.py
